--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,73 +1,83 @@
-name: Build and Package
+name: Build and Release
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    tags:
+      - 'v*.*.*'
 
 jobs:
-  build-windows:
-    runs-on: windows-latest
-
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pyinstaller pyqt5
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller PyQt5
 
-    - name: Build executable
-      run: |
-        pyinstaller --name ProjectExportTool --onefile --windowed main.py
+      - name: Build executable
+        run: |
+          pyinstaller --onefile main.py
+        shell: bash
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: ProjectExportTool-windows
-        path: dist/ProjectExportTool.exe
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.os }}-build
+          path: dist/
 
-  build-macos:
-    runs-on: macos-latest
-
+  release:
+    needs: build
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: windows-latest-build
+          path: ./dist/windows
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: macos-latest-build
+          path: ./dist/macos
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
+      - name: Upload Release Asset for Windows
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/windows/main.exe
+          asset_name: main-windows.exe
+          asset_content_type: application/octet-stream
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pyinstaller pyqt5 dmgbuild
-
-    - name: Build executable
-      run: |
-        pyinstaller --name ProjectExportTool --onefile --windowed main.py
-
-    - name: Prepare DMG build directory
-      run: |
-        mkdir -p dist/dmg
-        cp -r dist/ProjectExportTool.app dist/dmg/ProjectExportTool.app
-
-    - name: Create DMG
-      run: |
-        dmgbuild -s dmg_settings.py "ProjectExportTool" "dist/ProjectExportTool.dmg"
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: ProjectExportTool-macos
-        path: dist/ProjectExportTool.dmg
+      - name: Upload Release Asset for macOS
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/macos/main
+          asset_name: main-macos
+          asset_content_type: application/octet-stream
