--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.12'
+          python-version: '3.x'
 
       - name: Install dependencies
         run: |
@@ -29,12 +29,12 @@ jobs:
       - name: Build executable
         run: |
           if [[ "${{ matrix.os }}" == 'windows-latest' ]]; then
-            pyinstaller --onefile --add-data "HarmonyOS_Sans_SC_Regular.ttf;." main.py
+            pyinstaller --onefile --noconsole --name "ProjectExportTool" --add-data "HarmonyOS_Sans_SC_Regular.ttf;." main.py
           elif [[ "${{ matrix.os }}" == 'macos-latest' ]]; then
-            pyinstaller --onefile --add-data "HarmonyOS_Sans_SC_Regular.ttf:." main.py
-            hdiutil create -volname "ProjectExportTool" -srcfolder dist -ov -format UDZO dist/ProjectExportTool.dmg
+            pyinstaller --onefile --windowed --name "ProjectExportTool" --add-data "HarmonyOS_Sans_SC_Regular.ttf:." main.py
+            hdiutil create -volname "ProjectExportTool" -srcfolder dist/ProjectExportTool.app -ov -format UDZO dist/ProjectExportTool.dmg
           else
-            pyinstaller --onefile --add-data "HarmonyOS_Sans_SC_Regular.ttf:." main.py
+            pyinstaller --onefile --name "ProjectExportTool" --add-data "HarmonyOS_Sans_SC_Regular.ttf:." main.py
           fi
         shell: bash
 
@@ -48,13 +48,13 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Download Artifacts
+      - name: Download Artifacts (Windows)
         uses: actions/download-artifact@v2
         with:
           name: windows-latest-build
           path: ./dist/windows
 
-      - name: Download Artifacts
+      - name: Download Artifacts (macOS)
         uses: actions/download-artifact@v2
         with:
           name: macos-latest-build
@@ -77,8 +77,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/windows/main.exe
-          asset_name: main-windows.exe
+          asset_path: ./dist/windows/ProjectExportTool.exe
+          asset_name: ProjectExportTool-windows.exe
           asset_content_type: application/octet-stream
 
       - name: Upload Release Asset for macOS
